k8s-yamls/ubuntu-test-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-deployment-test
  namespace: custom-hpa-test
  labels:
    app: ubuntu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu
  template:
    metadata:
      labels:
        app: ubuntu
    spec:
      containers:
      - name: ubuntu
        image: ubuntu
        command: ["sleep", "123456"]
