k8s-yamls/nginx-proxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
  namespace: custom-hpa-test
  labels:
    app: custom-hpa-test
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: custom-hpa-test
