k8s-yamls/nodejs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs
  namespace: custom-hpa-test
  labels:
    app: custom-hpa-test
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: custom-hpa-test
