k8s-yamls/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-custom-hpa-test-ingress-netpol
  namespace: qca02-crm-server-ns
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app: custom-hpa-test
      ports:
        - protocol: TCP
          port: 4050
